<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:theme="@style/LoginTheme"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:id="@+id/login_layout"
        android:animateLayoutChanges="true"
        android:background="#eeeeee"
>
    <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bar_height"
            android:paddingTop="@dimen/bar_padding"
            android:background="#4a5569"
            android:elevation="4dp"
           >
        <ImageView
                android:id="@+id/back_button_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:src="@drawable/back_arrow_toolbar"
        />

        <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/log_in"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:textStyle="bold" android:fontFamily="@font/roboto"/>
    </android.support.v7.widget.Toolbar>

    <include
            layout="@layout/error_message"
            android:id="@+id/errorIncl"/>


    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="35dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

        <ImageView
                android:id="@+id/settingsImage"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/hat_logo_small"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_vertical">

            <TextView
                    android:id="@+id/hatNameLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/your_hat_name"
                    android:textAlignment="viewStart"
                    android:maxLength="25"
                    android:ellipsize="end"
                    android:textSize="20sp"
                    android:textColor="#4a556c" android:textStyle="bold"/>
            <TextView
                    android:id="@+id/hatDomainLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/your_hat_domain" android:textColor="#9a9a9a"/>
        </LinearLayout>
    </LinearLayout>

    <EditText
            android:id="@+id/hatNameEt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#ffffff"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/enter_hat_name"
            android:inputType="textPersonName"
            android:maxLength="22"
            android:textAllCaps="false"
            android:digits="abcdefghijklmnopqrstuvwxyz1234567890"
            android:paddingStart="15dp"
            android:paddingEnd="15dp" android:textColor="#4a556b"/>
    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp">

        <EditText
                android:id="@+id/hatDomainEt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#ffffff"
                android:ems="10"
                android:focusable="false"
                android:fontFamily="@font/roboto"
                android:hint="@string/select_hat_domain"
                android:inputType="text"
                android:paddingStart="15dp"
                android:paddingEnd="15dp" android:textColor="#4a556b"/>

        <ImageButton
                android:layout_width="20dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:id="@+id/domainBtn"
                android:layout_alignParentEnd="true"
                android:background="@android:color/transparent"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="22dp"
                android:src="@drawable/icon_right_arrow" />
    </RelativeLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/tapping_next"
            android:textAlignment="center" android:textColor="#9e9e9e"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|bottom"
    >
        <Button
                android:id="@+id/nextLoginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:stateListAnimator="@null"
                android:text="@string/next"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:enabled="false"
                android:background="@drawable/button_disabled_rounded"
                android:textStyle="bold" android:textSize="15sp" android:fontFamily="@font/roboto_medium"/>

    </LinearLayout>

</LinearLayout>